--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,5 +1,5 @@
 # Use an official Node runtime as a parent image
-FROM node:22
+FROM node:20-slim
 
 # Set the working directory in the container
 WORKDIR /app
@@ -17,4 +17,4 @@ COPY . .
 EXPOSE 5173
 
 # Run npm start command when the container launches
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "dev", "--", "--host"]
