--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "dev": "vite --port=3001",
+    "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "start": "vite"
@@ -32,6 +32,7 @@
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-router": "^1.84.0",
     "@tanstack/router-devtools": "^1.84.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
