--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   backend:
     build:
@@ -19,6 +17,8 @@ services:
     build: ./frontend
     ports:
       - "5173:5173"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
   db:
     image: postgres:16
     environment:
