--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@auth/*": ["./src/lib/features/auth/*"],
       "@components/*": ["./src/lib/components/*"],
       "@contexts/*": ["./src/lib/contexts/*"],
       "@hooks/*": ["./src/lib/hooks/*"],
